# tukicode

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  __init__.py  agent_icon.py  config.py  last_response.json  package-lock.json  package.json  planner_state.json  pyproject.toml  requirements.txt  setup.py  tuki.py  tuki.spec  tukicode.toml.example
.github/workflows/: build.yml
agent/: __init__.py  anthropic_client.py  context.py  executor.py  gemini_client.py  loop.py  ollama_client.py  openrouter_client.py  parser.py  planner.py  prompts.py  state.py
core/: controller.py
integrations/: __init__.py  base_integration.py
integrations/example_openclaw/: README.md  __init__.py
prompts/: compression_prompt.txt  system_prompt.json
tests/: test_context.py  test_executor.py  test_parser.py  test_planner.py  test_tools.py
tools/: __init__.py  base.py  file_tools.py  registry.py  search_tools.py  shell_tools.py
tuki_native/: Cargo.toml  pyproject.toml
tuki_native/src/: fs.rs  lib.rs  pty.rs  search.rs
tukicode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ui/: __init__.py  app.py  display.py  input.py  layout.py  screens.py
