[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tukicode"
version = "1.3.3"
description = "TukiCode - CLI Programming Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "ollama>=0.1.0",
    "httpx>=0.25.0",
    "pyperclip>=1.8.0",
    "google-generativeai>=0.5.0",
    "anthropic>=0.25.0",
    "textual==8.2.5",
]

[project.scripts]
tuki = "tuki:main"

[tool.setuptools]
packages = ["agent", "ui", "tools", "prompts"]
py-modules = ["tuki", "config", "agent_icon", "integrations"]
