[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tuki_native"
version = "0.1.0"
description = "Native Rust extension for TukiCode — fast file system, search, and terminal utilities"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
